# AnGIneer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  start.ps1  stop.ps1
.claude/: settings.local.json
apps/: Techniques.md
backend/: api_bridge.py  run_demo.py
data/: knowledge.sqlite3
docker/: Dockerfile.backend  Dockerfile.frontend  WEBHOOK-DEPLOY.md  angineer-webhook.service  deploy.sh  docker-compose.yml  webhook-server.py
docs/: apps-techniques.md  architecture-map.yaml  code-fix-plan.md  docs-core-decoupling-plan.md  docs-module-next-step-plan.md  knowledge-graph-per-doc-plan.md  rag-implementation-roadmap.md  services-techniques.md  sop-extractor-plan.md
frontend/: index.html
scripts/: debug_eval_001.py  debug_eval_question.py  embedding_server.py  reranker_server.py  start-ai-services.bat
services/: README.md  Techniques.md
services/ai-inference/: pyproject.toml  start-ai-services.ps1
services/ai-inference/src/ai_inference/: __init__.py  llm_client.py  llm_config.py  llm_logger.py  llm_response_parser.py  semantic_embedding_service.py  semantic_reranker_service.py
services/ai-inference/tests/: test_llm_client.py
services/angineer-core/: pyproject.toml
services/angineer-core/src/angineer_core/: __init__.py  base_config.py  base_contracts.py  base_di.py  base_logger.py  base_utils.py  classifier.py  config.py  contracts.py  dispatcher.py  memory.py
services/angineer-core/src/angineer_core/agents/: __init__.py  classifier.py  dispatcher.py
services/angineer-core/src/angineer_core/core/: __init__.py  classifier.py  contextStruct.py  dispatcher.py  llm.py  memory.py
services/angineer-core/src/angineer_core/infra/: __init__.py  dependency_injection.py  llm_client.py  response_parser.py  timing.py
services/angineer-core/src/angineer_core/standard/: __init__.py  context_struct.py  response_models.py
services/angineer-core/tests/: test_dispatcher.py
services/docs-core/: README.md  pyproject.toml
services/docs-core/src/docs_core/: KnowledgeTool.py  __init__.py  knowledge_service.py
services/docs-core/src/docs_core/answering/: answer_assembler.py  citation_builder.py
services/docs-core/src/docs_core/api/: knowledge_api.py  parse_api.py  preview_api.py
services/docs-core/src/docs_core/canonical/: builder.py
services/docs-core/src/docs_core/evals/: dataset_loader.py  eval_answer.py  eval_reporter.py  eval_retrieval.py  eval_text2sql.py
services/docs-core/src/docs_core/indexing/: __init__.py  chroma_vector_store.py  config.py  embedding_provider.py  sqlite_vector_store.py  vector_indexer.py  vector_store.py
services/docs-core/src/docs_core/ingest/: __init__.py
services/docs-core/src/docs_core/ingest/extract/: __init__.py  mineru_parser.py
services/docs-core/src/docs_core/ingest/normalize/: LLM_refiner_titles.py  __init__.py  formula_semantics.py  structure_builder.py
services/docs-core/src/docs_core/ingest/organize/: __init__.py  builder.py  tag_rules.py  types.py
services/docs-core/src/docs_core/ingest/storage/: db_store.py  file_store.py
services/docs-core/src/docs_core/ingest/store/: __init__.py  assets_file_store.py  blocks_sql_store.py  canonical_sql_store.py
services/docs-core/src/docs_core/ingest/structured/: __init__.py  formula_semantics.py  structure_builder.py
services/docs-core/src/docs_core/parser/: mineru_parser.py  mineru_structure.py
services/docs-core/src/docs_core/query/: contracts.py  intent_parser.py  service.py
services/docs-core/src/docs_core/query_protocols/: __init__.py  contracts.py
services/docs-core/src/docs_core/retrieval/: dense_retriever.py  formula_retriever.py  hybrid_retriever.py  query_normalizer.py  query_router.py  reranker.py  service.py  sparse_retriever.py  table_retriever.py
services/docs-core/src/docs_core/storage/: file_storage.py  mineru_rag_strategy.py  pageindex_strategy.py  structured_strategy.py
services/docs-core/src/docs_core/structured/: result_store_db.py  result_store_json.py
services/docs-core/src/docs_core/tables/: __init__.py  table_classifier.py  table_representation_builder.py
services/docs-core/src/docs_core/text2sql/: schema_linker.py  sql_executor.py  sql_validator.py
services/docs-core/tests/: test_canonical_graph_projection.py  test_embedding_provider.py  test_ingest_pipeline.py  test_query_pipeline.py  test_retrieval_precision_pipeline.py  test_semantic_graph_contract.py
services/engtools/: pyproject.toml
services/engtools/src/engtools/: CalculatorTool.py  CommonTool.py  ConditionalTool.py  DocsRetrievalTool.py  KnowledgeTool.py  TableTool.py  UserInputTool.py  __init__.py  config.py
services/evals-core/: pyproject.toml
services/evals-core/src/evals_core/: __init__.py  contracts.py
services/evals-core/src/evals_core/dataset/: __init__.py  loader.py  manager.py  schema.py
services/evals-core/src/evals_core/runner/: __init__.py  _prediction_trace.py  _query_helper.py  answer_eval.py  base.py  case_trace.py  retrieval_eval.py  sop_eval.py  suite_runner.py  text2sql_eval.py
services/evals-core/src/evals_core/storage/: __init__.py  result_store.py
services/evals-core/tests/: test_dataset_manager.py  test_retrieval_precision_eval.py
services/knowledge-graph/: pyproject.toml
services/knowledge-graph/src/knowledge_graph/: __init__.py  config.py  entity_extractor.py  evidence_builder.py  extractor_prompts.py  graph_orchestrator.py  graph_store.py  question_mapper.py  relation_infer.py  sop_path_generator.py
services/sop-core/: pyproject.toml
services/sop-core/src/sop_core/: __init__.py  sop_loader.py  sop_parser.py  sop_path_generator.py
services/sop-core/src/sop_core/research/: __init__.py  contracts.py  evidence_builder.py  graph_consumer.py  orchestrator.py  store.py
services/sop-core/tests/: test_sop_loader.py
services/tree-core/: pyproject.toml
services/tree-core/src/tree_core/: __init__.py  tree_contracts.py  tree_store.py
tests/: README.md  conftest.py  interactive_test.py  regression_report.py  result.md  result_test_03.md  result_test_05.md  (+27 more)
(+206 files in other folders)
