[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angineer-engtools"
version = "0.1.0"
description = "AnGIneer engineering tools"
requires-python = ">=3.10"
dependencies = [
    "angineer-ai-inference",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
