[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angineer-tree-core"
version = "0.1.0"
description = "AnGIneer tree operations infrastructure"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
